--- a/tutorials/01-html/index.html
+++ b/tutorials/01-html/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Surface page</title>
 </head>
 <body>
     <h1><strong>Somebody once told me</strong></h1>
+    <a href="whatever-you-like/">page 3</a>
+    <a href="something-else.html">page 2</a>
 </body>
 </html>
