--- a/tutorials/01-html/whatever-you-like/index.html
+++ b/tutorials/01-html/whatever-you-like/index.html
@@ -8,6 +8,6 @@
 <body>
     <p>I ain't the sharpest tool in the shed</p>
     <a href="..">home</a>
-    <a href="/">Art 109 landing page</a>
+    <a href="/art109/">Art 109 landing page</a>
 </body>
 </html>
