Included new link to main landing page
Simply added new link for tutorial 02-html alongside the original 01-html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>THIS IS THE LANDING PAGE FOR ART 109</h1>
     <a href="tutorials/01-html/">Enter the zone</a>
+    <a href="tutorials/02-html/">The FUN zone</a>
 </body>
 </html>
