--- a/tutorials/02-html/index.html
+++ b/tutorials/02-html/index.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <h1 contenteditable="true" id="top">HTML FOR US BY US</h1>
+    <a href="/art109/">Art 109 landing page</a>
         <nav>
             <ul>
                 <li><a href="#bird">Bird</a></li>
@@ -65,6 +66,7 @@
             <p>SHIFT+ALT+DOWN IS THE DUPLICATE SHORTCUT FOR WINDOWS!!!!!!</p>
         </section>
         <footer>-====-====-</footer>
+    <a href="/art109/">Art 109 landing page</a>
     </main>
 </body>
 
