--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>THIS IS THE LANDING PAGE FOR ART 109</h1>
     <a href="tutorials/01-html/">Enter the zone</a>
     <a href="tutorials/02-html/">The FUN zone</a>
-    <a href="tutorials/02-html-images/">3 images, 1 guy - ME!</a>
+    <a href="tutorials/03-html-images/">3 images, 1 guy - ME!</a>
+    <a href="tutorials/04-css/">CSS = Cool Script Stuff</a>
 </body>
 </html>
