--- a/tutorials/05-css-animations/index.html
+++ b/tutorials/05-css-animations/index.html
@@ -24,6 +24,9 @@
             <p class="bro-walking">🚶‍♂️</p>
         </div>
     </main>
+    <footer>
+        <p class="jumpscare">BOO!</p>
+    </footer>
 </body>
 
 </html>
