--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <a href="tutorials/02-html/">The FUN zone</a>
     <a href="tutorials/03-html-images/">3 images, 1 guy - ME!</a>
     <a href="tutorials/04-css/">CSS = Cool Script Stuff</a>
+    <a href="tutorials/05-css/">CSSA = Cool Script Stuff Animations</a>
 </body>
 </html>
