--- a/tutorials/05-css-animations/index.html
+++ b/tutorials/05-css-animations/index.html
@@ -12,6 +12,7 @@
     <header>
         <h1 class="title">Make Things Move</h1>
     </header>
+    <a href="/art109/">Art 109 landing page</a>
     <main>
         <div class="square"></div>
         <div class="button-div">
