--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a href="tutorials/01-html/">Enter the zone</a>
     <a href="tutorials/02-html/">The FUN zone</a>
     <a href="tutorials/03-html-images/">3 images, 1 guy - ME!</a>
-    <a href="tutorials/04-css/">CSS = Cool Script Stuff</a>
-    <a href="tutorials/05-css/">CSSA = Cool Script Stuff Animations</a>
+    <a href="tutorials/04-css-transitions/">CSS = Cool Script Stuff</a>
+    <a href="tutorials/05-css-animations/">CSSA = Cool Script Stuff Animations</a>
 </body>
 </html>
