--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <a href="tutorials/03-html-images/">3 images, 1 guy - ME!</a>
     <a href="tutorials/04-css-transitions/">CSS = Cool Script Stuff</a>
     <a href="tutorials/05-css-animations/">CSSA = Cool Script Stuff Animations</a>
+    <a href="tutorials/06-dom/">DO (you re)Member, the 21st night of September</a>
+    <a href="tutorials/07-dom-imageClick/">DOMain expansion: IMAGE CLICK</a>
 </body>
 </html>
